--- a/main.css
+++ b/main.css
@@ -243,8 +243,15 @@ strong {
     font-family: 'Raleway', sans-serif;
     line-height: 1;
     font-size: 16px;
-    /* margin: 40px;  */
     color:var(--gray);    
+}
+
+.here-btn {
+    color:rgb(132, 132, 156);
+}
+
+.here-btn:hover {
+    color:white;
 }
 
 .description {
@@ -252,14 +259,12 @@ strong {
     line-height: 1.5;
     font-weight: 400;
     color:white;
-    width: 500px;
+    width: 400px;
     font-size: 28px;
     display:inline-block;
-    margin-left: 1rem;
-    padding-right: 100px;
+    padding-right: 50px;
     float:right;
-    padding-top: 75px;
-    margin-bottom: 24px;
+    padding-top: 80px;
 }
 
 /******* CONTACT SECTION *******/
@@ -386,6 +391,8 @@ h4 {
 
 .contact-me {
     display:flex;
+    flex-direction: column;
+    justify-content: column;
 }
 
 .container {
@@ -394,9 +401,12 @@ h4 {
     float:right;
     margin-top: 4rem;
     margin-right: 2rem;
+    margin-bottom: 7rem;
 }
 
-main {
-    background: url(../images/leaf-2.png) no-repeat;
+.contact-me {
+    background: url(../images/leaf-3.png) no-repeat;
     background-position: left;
+    padding-top: 4rem;
+    height: 27rem;
 }
