--- a/main.css
+++ b/main.css
@@ -7,6 +7,8 @@
     --dark-green: #039d69;
     --green:#6aeeb5;
     --radius:.02rem;
+    --font1:'Raleway', sans-serif;
+    --font2:'Poppins', sans-serif;
 }
 
 * {
@@ -394,9 +396,32 @@ h4 {
 /* CONTACT PAGE STYLES */
 
 .contact-me {
+    width: 100%;
     display:flex;
     flex-direction: column;
-    justify-content: column;
+    justify-content: center;
+}
+
+.socials ul {
+    list-style:none;
+}
+
+.socials li {
+    display:inline-block;
+    margin-right: 2rem;
+}
+
+.socials i {
+    color:#9B526A;
+    font-size: 48px;
+    /* padding-bottom: 2rem;*/
+    margin-top: 2rem;
+}
+
+.socials i:hover {
+    /* text-decoration: underline; */
+    color:#9B526A;
+    opacity:40%;
 }
 
 .container {
@@ -426,69 +451,68 @@ h4 {
     font-size: 18px;
 }
 
-.contact-form {
-    display: flex;
-    align-items: right;
-    justify-content: right;
-}
+/******* FORM SECTION *******/
 
-form {
-    /* background-color: #D6D0D6;
-    opacity: 60%; */
-    width: 50%;
-    max-width:50%;
-    font-weight: 500;
-    font-family:'Raleway', sans-serif;
-}
-
-.input-group {
-    margin-bottom: 30px;
-    position:relative
-}
-
-input, textarea {
-    width: 100%;
-    padding: 10px;
-    outline:0;
-    border:1px solid #111;
-    border-radius:8px;
-    color:black;
-    background:#d6d0d6;
-    opacity:60%;
-    /* font-size: 21px; */
-}
-
-label {
-    height: 100%;
-    position:absolute;
-    left: 0;
-    top: 0;
-    padding: 10px;
-    color:black;
-    cursor:text;
-    transition: 0.2s;
-}
-
-#contact-btn {
-    padding: 10px 0;
-    width: 80%;
-    cursor:pointer;
-}
-
-input:focus~label,
-input:valid~label,
-textarea:focus~label,
-textarea:valid~label {
-    top: -36px;
-    font-size: 16px;
+.container {
+    min-width: 960px;
+    margin: auto;
 }
 
 .row {
     display:flex;
-    align-items: left;
-    justify-content: space-between;
+    justify-content: center;
+    align-items:center;
+    min-height: 100vh;
 }
 
-.row .input-group {
-    flex-basis:48%;
+.col {
+    width: 50%;
+}
+
+section {
+    width: 100%;
+    /* background: #2d3436; */
+}
+
+form {
+    width: 100%;
+}
+
+.name-group,
+.email-group,
+.mssg,
+.price-group,
+.time-group {
+    width: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input, textarea {
+    width: 50%;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 12px;
+    border-radius: 10px;
+    background:var(--purple);
+    /* opacity: 60%; */
+    border:none;
+    outline:none;
+    transition: all .3s ease-in-out;
+}
+
+input::placeholder,
+textarea::placeholder{
+    color:#fff;
+}
+
+input:focus, 
+textarea:focus {
+    background:var(purple);
+    opacity:60%;
+}
+
+textarea {
+    width: 100%;
 }
