--- a/main.css
+++ b/main.css
@@ -473,7 +473,7 @@ h4 {
     justify-content: right;
     align-items:right;
     /* min-height: 100vh; */
-    margin-left: 6rem;
+    /* margin-left: 6rem; */
 }
 
 .col {
