--- a/main.css
+++ b/main.css
@@ -434,15 +434,6 @@ h4 {
     opacity:40%;
 }
 
-.container {
-    /* width: 100%; */
-    display:flex; 
-    float: right;
-    margin-top: 4rem;
-    margin-right: 2rem;
-    margin-bottom: 7rem;
-}
-
 .contact-me {
     padding-top:8rem;
     padding-left: 4rem;
@@ -464,8 +455,10 @@ h4 {
 /******* FORM SECTION *******/
 
 .container {
-    /* min-width: 100px; */
-    margin: auto;
+    display:inline-block; 
+    float: right;
+    min-width: 100px;
+    padding: 75px 64px;
 }
 
 .row {
