added spacing to h2

--- a/main.css
+++ b/main.css
@@ -539,6 +539,9 @@ textarea {
     .hero h2 {
         font-size: 48px;
     }
+    .hero p {
+        padding: 0 96px;
+    }
     .wrapper {
         display:flex;
         flex-direction: row;
