updated tablet styles
updated space between text and img

--- a/main.css
+++ b/main.css
@@ -628,7 +628,7 @@ textarea {
 }
 .about-me-wrapper {
     display:flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 h4 {
     font-family: 'Mulish', sans-serif;
