updated styles for tablet media
updated spacing between img and text styles for tablet media query

--- a/main.css
+++ b/main.css
@@ -869,6 +869,9 @@ textarea {
     color: #00452B;
     width: 30%;
     }
+.about-me-wrapper {
+    display: flex;
+    justify-content: space-around;
 }
 /*------------------------------------------------- 
         ******* DESKTOP MEDIA QUERY STYLES  *******
