removed margin from description

--- a/main.css
+++ b/main.css
@@ -218,9 +218,9 @@ strong {
     /* margin-left: 1rem; */
 }
 
-.description {
+/* .description {
     margin: 1rem 2rem;
-}
+} */
 
 .proj-1 img:hover,
 .proj-2 img:hover,
