--- a/main.css
+++ b/main.css
@@ -259,8 +259,7 @@ strong {
     color:white;
     width: 22rem;
     font-size: 1.75rem;
-    margin-right: 16px;
-    margin-top: 2rem;
+    margin: 2rem 16px;
 }
 
 /***************** CONTACT FOOTER  ****************/
